class generator